<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		excelme_design
	 *	@date 		1622297308143
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/excelme_design" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View android:id="@+id/_bg__food"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="411dp"
				android:layout_height="823dp" />

			<ImageView android:id="@+id/background_1"
				android:src="@drawable/background_1"
				android:contentDescription="@string/background_1"
				 android:layout_marginStart="1dp"
				android:layout_marginTop="-9dp"
				android:layout_width="410dp"
				android:layout_height="823dp" />

			<View android:id="@+id/rectangle_29"
				android:background="@drawable/rectangle_29_shape"
				 android:layout_marginStart="83dp"
				android:layout_marginTop="432dp"
				android:layout_width="328dp"
				android:layout_height="163dp" />

			<View android:id="@+id/rectangle_30"
				android:background="@drawable/rectangle_30_shape"
				 android:layout_marginStart="-2dp"
				android:layout_marginTop="221dp"
				android:layout_width="326dp"
				android:layout_height="163dp" />


			<RelativeLayout
				android:id="@+id/main"
				android:layout_width="412dp"
				android:layout_height="69dp"
				android:background="@drawable/main"

				android:elevation="4dp"
				tools:targetApi="lollipop">
				<ImageView
					android:id="@+id/arrow_1"
					android:layout_width="75dp"
					android:layout_height="33dp"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="0dp"
					android:layout_marginTop="18dp"
					android:layout_marginEnd="315dp"
					android:contentDescription="@string/arrow_1"
					android:src="@drawable/arrow_1"
					android:onClick="Back"/>

				<ImageView
					android:id="@+id/logotextg_1"
					android:layout_width="186dp"
					android:layout_height="62dp"
					android:layout_marginStart="113dp"
					android:layout_marginTop="10dp"
					android:contentDescription="@string/logotextg_1"
					android:src="@drawable/logotextg_1" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/food"
				android:onClick="Lunch"
				android:layout_width="130dp"
				android:layout_height="130dp"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="176dp"
				android:layout_marginTop="237dp"
				android:background="@drawable/next_button_background"
				android:elevation="6dp"
				tools:targetApi="lollipop">

				<TextView android:id="@+id/lunch"
					android:fontFamily="@font/roboto"
					android:textSize="24sp"
					android:textColor="@color/rectangle_29_color"
					android:layout_marginStart="32dp"
					android:layout_marginTop="93dp"
					android:layout_width="77dp"
					android:layout_height="45dp"
					android:text="@string/lunch_string"
					 />

				<ImageView android:id="@+id/lunch_1"
					android:src="@drawable/lunch_1"
					android:contentDescription="@string/lunch_1"
					 android:layout_marginStart="21dp"
					android:layout_marginTop="8dp"
					android:layout_width="88dp"
					android:layout_height="85dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/main_ek1"
				android:layout_marginTop="754dp"
				android:layout_marginStart="-1dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/calendar"
				android:layout_marginTop="716dp"
				android:layout_marginStart="41dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

			</RelativeLayout>

			<View android:id="@+id/rectangle_40"
				android:background="@drawable/rectangle_40_shape"
				 android:layout_marginStart="121dp"
				android:layout_marginTop="738dp"
				android:layout_width="85dp"
				android:layout_height="85dp" />

			<RelativeLayout
				android:id="@+id/mainbottom"
				android:layout_width="412dp"
				android:layout_height="69dp"
				android:layout_alignTop="@id/rectangle_29"

				android:layout_marginTop="231dp"
				android:background="@drawable/main"
				android:elevation="4dp"
				android:gravity="bottom"
				tools:targetApi="lollipop">

				<ImageView
					android:id="@+id/sleepg_2"
					android:onClick="Sleep"
					android:layout_width="60dp"
					android:layout_height="58dp"
					android:layout_marginStart="316dp"
					android:layout_marginTop="759dp"
					android:contentDescription="@string/sleepg_2"
					android:src="@drawable/sleepg_2" />

				<ImageView
					android:id="@+id/habitg_3"
					android:onClick="Habit"
					android:layout_width="62dp"
					android:layout_height="60dp"
					android:layout_marginStart="229dp"
					android:layout_marginTop="759dp"
					android:contentDescription="@string/habitg_3"
					android:src="@drawable/habitg_3" />

				<ImageView
					android:id="@+id/foodg_3"

					android:layout_width="62dp"
					android:layout_height="61dp"
					android:layout_marginStart="141dp"
					android:layout_marginTop="761dp"
					android:contentDescription="@string/foodg_3"
					android:src="@drawable/foodg_3" />


				<ImageView
					android:id="@+id/sportg_3"
					android:onClick="Sport"
					android:layout_width="88dp"
					android:layout_height="73.47dp"
					android:layout_marginStart="34dp"
					android:layout_marginTop="755dp"
					android:contentDescription="@string/sportg_3"
					android:src="@drawable/sportg_3" />
			</RelativeLayout>


			<RelativeLayout android:id="@+id/sport"
				android:onClick="Breakfast"
				android:layout_width="130dp"
				android:layout_height="130dp"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="20dp"
				android:layout_marginTop="235dp"
				android:background="@drawable/next_button_background"
				android:elevation="6dp"
				tools:targetApi="lollipop">

				<TextView android:id="@+id/breakfast"
					android:fontFamily="@font/roboto"
					android:textSize="24sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/rectangle_29_color"
					android:layout_marginStart="12dp"
					android:layout_marginTop="88dp"
					android:layout_width="118dp"
					android:layout_height="63dp"
					android:text="@string/breakfast_string"
					 />

				<ImageView android:id="@+id/egg_1"
					android:src="@drawable/egg_1"
					android:contentDescription="@string/egg_1"
					 android:layout_marginStart="22dp"
					android:layout_marginTop="14dp"
					android:layout_width="80dp"
					android:layout_height="70dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/habits"
				android:onClick="Dinner"
				android:layout_width="130dp"
				android:layout_height="130dp"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="108dp"
				android:layout_marginTop="452dp"
				android:background="@drawable/next_button_background"
				android:elevation="4dp"
				tools:targetApi="lollipop">

				<TextView android:id="@+id/dinner"
					android:fontFamily="@font/roboto"
					android:textSize="24sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/rectangle_29_color"
					android:layout_marginStart="30dp"
					android:layout_marginTop="87dp"
					android:layout_width="81dp"
					android:layout_height="45dp"
					android:text="@string/dinner_string"
					 />

				<ImageView android:id="@+id/salmon_1"
					android:src="@drawable/salmon_1"
					android:contentDescription="@string/salmon_1"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="5dp"
					android:layout_width="90dp"
					android:layout_height="87dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/sleep"
				android:onClick="Snacks"
				android:layout_width="130dp"
				android:layout_height="130dp"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="256dp"
				android:layout_marginTop="452dp"
				android:background="@drawable/next_button_background"
				android:elevation="6dp"
				tools:targetApi="lollipop">

				<TextView android:id="@+id/snacks"
					android:fontFamily="@font/roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/rectangle_29_color"
					android:layout_marginStart="-7dp"
					android:layout_marginTop="88dp"
					android:layout_width="147dp"
					android:layout_height="54dp"
					android:text="@string/snacks_string"
					 />

				<ImageView android:id="@+id/snacks_1"
					android:src="@drawable/snacks_1"
					android:contentDescription="@string/snacks_1"
					 android:layout_marginStart="18dp"
					android:layout_marginTop="5dp"
					android:layout_width="100dp"
					android:layout_height="92dp" />

			</RelativeLayout>



			<TextView android:id="@+id/diet"
				android:fontFamily="@font/roboto"
				android:textSize="40sp"
				android:textColor="@color/diet_color"
				android:layout_marginStart="20dp"
				android:layout_marginTop="97dp"
				android:layout_width="93dp"
				android:layout_height="77dp"
				android:text="@string/diet_string"
				 />

			<TextView android:id="@+id/daily_calories_1600"
				android:fontFamily="@font/roboto"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="35sp"
				android:textColor="@color/rectangle_29_color"
				android:layout_marginStart="165dp"
				android:layout_marginTop="97dp"
				android:layout_width="226dp"
				android:layout_height="99.5dp"
				android:text="@string/daily_calories_1600_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>